Login/Register UX design

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -197,7 +197,7 @@
 				Course Selection
 			</p>			
 			<p style="padding: 1em 1em 1em 1em;">
-				Select the course in which your child want to enroll. Provide all the required details asked while enrolling. You can select multiple courses for your time.
+				Select the course in which your child want to enroll. Provide all the required details asked while enrolling. You can select multiple courses for your child.
 			</p>		
 			</div>	
 		</div>	
