--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div id="HomeSlider" class="carousel slide z-depth-1-half carousel-fade mobileslide" data-ride="carousel"  data-interval="2500">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg" alt="First slide">
+          <img class="d-block w-100" src="/assets/img/home/sample/img1.jpg" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Text in slide</p>
             </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg" alt="Second slide">           
+          <img class="d-block w-100" src="/assets/img/home/sample/img2.jpg" alt="Second slide">           
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg" alt="Third slide">
+          <img class="d-block w-100" src="/assets/img/home/sample/img3.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExample1" role="button" data-slide="prev">
@@ -25,7 +25,8 @@
     </div>
 
 
-
+<br/>
+<br/>
     <div class="row">
     	<div class="col-md-3">&nbsp;
     	</div>
@@ -40,13 +41,14 @@
   	<button type="button" class="btn register">Register Free</button>
 </div>
 
-
+<br/>
+<br/>
 
 <div class="row" >
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/subject.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Subject Wise Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -56,9 +58,9 @@
 			</p>			
 		</div>	
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/language.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Language Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -69,9 +71,9 @@
 		</div>	
 
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/dance.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Dance Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -85,9 +87,9 @@
 
 <div class="row" >
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/music_sing.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Music/Singing Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -97,9 +99,9 @@
 			</p>			
 		</div>	
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/yoga.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Yoga/Excercise Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -110,9 +112,9 @@
 		</div>	
 
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/karate.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Karate/Martial Arts Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -132,9 +134,49 @@
 
  <div class="row myContent hidden" >
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
+			<img src="/assets/img/home/classes/technology.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Technology Class
+			</p>
+			<p class="fees">
+				<i class="fa fa-rupee"></i> 500 / class
+			</p>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>			
+		</div>	
+		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+			<img src="/assets/img/home/classes/cooking.jpg" class="img-fluid courseimg"/>
+			<p class="courseheading">
+				Cooking Class
+			</p>
+			<p class="fees">
+				<i class="fa fa-rupee"></i> 500 / class
+			</p>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>			
+		</div>	
+
+		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+			<img src="/assets/img/home/classes/photography.jpg" class="img-fluid courseimg"/>
+			<p class="courseheading">
+				Photography Class
+			</p>
+			<p class="fees">
+				<i class="fa fa-rupee"></i> 500 / class
+			</p>
+			<p>
+				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+			</p>			
+		</div>		
+	</div>
+
+	<div class="row myContent hidden" >
+		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
+			<img src="/assets/img/home/classes/paint_sketch.jpg" class="img-fluid courseimg"/>
+			<p class="courseheading">
+				Painting/Sketch Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -146,7 +188,7 @@
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
 			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Acting Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -159,7 +201,7 @@
 		<div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
 			<img src="/assets/img/home/child.jpg" class="img-fluid courseimg"/>
 			<p class="courseheading">
-				Math Class
+				Brain Development Class
 			</p>
 			<p class="fees">
 				<i class="fa fa-rupee"></i> 500 / class
@@ -174,7 +216,7 @@
 <hr/>
 
     	<div class="text-center">
-    		<h3>How to Start with us ?</h3>
+    		<h2><b>How to Start with us ?</b></h2>
     	</div>
 <br/>
 
@@ -183,7 +225,7 @@
 		<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">							
 			<div class="col1">
 			<p class="courseheading text-center stepsheading">
-				Parents Registration
+				1. Parents Registration
 			</p>			
 			<p style="padding: 1em 1em 1em 1em;">
 				Parents needs to make their registration and than provide their child details.
@@ -194,7 +236,7 @@
 			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 mobileslide">							
 		<div class="col1">		
 			<p class="courseheading text-center stepsheading">
-				Course Selection
+				2. Course Selection
 			</p>			
 			<p style="padding: 1em 1em 1em 1em;">
 				Select the course in which your child want to enroll. Provide all the required details asked while enrolling. You can select multiple courses for your child.
@@ -211,7 +253,7 @@
 			
 			<div class="col1">
 			<p class="courseheading text-center stepsheading">
-				Select Tutor
+				3. Select Tutor
 			</p>
 			
 			<p style="padding: 1em 1em 1em 1em;">
@@ -224,7 +266,7 @@
 			
 			<div class="col1">
 			<p class="courseheading text-center stepsheading">
-				Attend the course
+				4. Attend the course
 			</p>
 			
 			<p style="padding: 1em 1em 1em 1em;">
