--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -194,6 +194,7 @@
       </li>
       <li class="nav-item">
         <div class="nav-item">
+          <!-- <a [routerLink]="['/login']" class="btn btn-link" data-toggle="modal" data-target="#modalLRForm" (click)="openDialog()">1Login/Register</a>        -->
       <a href="#"  class="btn btn-primary px-5 signin"  data-toggle="modal" data-target="#modalLRForm">Login/Register</a>      
       </div>
       </li>      
@@ -273,7 +274,7 @@
 
       <!-- Register -->
       <p>Not a member?
-        <a href="">Register</a>
+        <a [routerLink]="['/parentsregister']" class="btn btn-link">Register</a>        
       </p>
 
     </form>
