--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,53 @@
-<div class="row">
+<div class="card">
+  
+  <!--Card content-->
+  <div class="card-body px-lg-5 pt-0">
 
-  <div class="col-md-6 login-container">
-    <h2 style="margin: auto">Login </h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" class="form-control" formControlName="username" id="username" autocomplete="off">
-        <div class="error" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">Username is required</div>
+    <!-- Form -->
+    <div mat-dialog-content>
+      <div>Number: {{ data.numbers }}</div>
+    </div>
+    <form class="text-center" style="color: #757575;" action="#!" [formGroup]="loginForm">
+
+      <!-- Email -->
+      <div class="md-form">
+        <input type="email" id="materialLoginFormEmail" placeholder="Email" class="form-control" formControlName="email" mdbInput mdbValidate/>
+         <mdb-error *ngIf="input.invalid && (input.dirty || input.touched)">Input invalid</mdb-error>
+    <mdb-success *ngIf="input.valid && (input.dirty || input.touched)">Input valid</mdb-success>
       </div>
-      <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" formControlName="password" id="pwd" autocomplete="off">
-        <div class="error" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Password is required</div>
+
+      <!-- Password -->
+      <div class="md-form">
+        <input type="password" id="materialLoginFormPassword" placeholder="Password" class="form-control" formControlName="password" mdbInput mdbValidate />
+             <mdb-error *ngIf="input.invalid && (input.dirty || input.touched)">Input invalid</mdb-error>
+    <mdb-success *ngIf="input.valid && (input.dirty || input.touched)">Input valid</mdb-success>
       </div>
-      <button class="btn btn-success" [disabled]="loginForm.invalid">Login</button>
-      <div *ngIf="invalidLogin" class="error">
-        <div>Invalid credentials.</div>
+
+      <div class="d-flex justify-content-around">
+        <div>
+          <!-- Remember me -->
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="materialLoginFormRemember">
+            <label class="form-check-label" for="materialLoginFormRemember">Remember me</label>
+          </div>
+        </div>
+        <div>
+          <!-- Forgot password -->
+          <a href="">Forgot password?</a>
+        </div>
       </div>
+
+      <!-- Sign in button -->
+      <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign in</button>
+
+      <!-- Register -->
+      <p>Not a member?
+        <a [routerLink]="['/parentsregister']" class="btn btn-link">Register</a>        
+      </p>
+
     </form>
+    <!-- Form -->
+
   </div>
+
 </div>
