--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -195,7 +195,8 @@
       <li class="nav-item">
         <div class="nav-item">
           <!-- <a [routerLink]="['/login']" class="btn btn-link" data-toggle="modal" data-target="#modalLRForm" (click)="openDialog()">1Login/Register</a>        -->
-      <a href="#"  class="btn btn-primary px-5 signin"  data-toggle="modal" data-target="#modalLRForm">Login/Register</a>      
+      <a href="#" *ngIf="!loginService.isUserLoggedIn()" routerLink="/login" class="btn btn-primary px-5">Login/Register</a>      
+      <a href="#" *ngIf="loginService.isUserLoggedIn()" routerLink="/logout" class="btn btn-primary px-5">Logout</a>      
       </div>
       </li>      
     </ul>
@@ -231,58 +232,6 @@
           <div class="tab-pane fade in show active" id="panel7" role="tabpanel">
 
             <!--Body-->
-
-            <!-- Material form login -->
-<div class="card">
-  
-  <!--Card content-->
-  <div class="card-body px-lg-5 pt-0">
-
-    <!-- Form -->
-    <form class="text-center" style="color: #757575;" action="#!" [formGroup]="validatingForm">
-
-      <!-- Email -->
-      <div class="md-form">
-        <input type="email" id="materialLoginFormEmail" placeholder="Email" class="form-control" formControlName="email" mdbInput mdbValidate/>
-         <mdb-error *ngIf="input.invalid && (input.dirty || input.touched)">Input invalid</mdb-error>
-    <mdb-success *ngIf="input.valid && (input.dirty || input.touched)">Input valid</mdb-success>
-      </div>
-
-      <!-- Password -->
-      <div class="md-form">
-        <input type="password" id="materialLoginFormPassword" placeholder="Password" class="form-control" formControlName="password" mdbInput mdbValidate />
-             <mdb-error *ngIf="input.invalid && (input.dirty || input.touched)">Input invalid</mdb-error>
-    <mdb-success *ngIf="input.valid && (input.dirty || input.touched)">Input valid</mdb-success>
-      </div>
-
-      <div class="d-flex justify-content-around">
-        <div>
-          <!-- Remember me -->
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="materialLoginFormRemember">
-            <label class="form-check-label" for="materialLoginFormRemember">Remember me</label>
-          </div>
-        </div>
-        <div>
-          <!-- Forgot password -->
-          <a href="">Forgot password?</a>
-        </div>
-      </div>
-
-      <!-- Sign in button -->
-      <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign in</button>
-
-      <!-- Register -->
-      <p>Not a member?
-        <a [routerLink]="['/parentsregister']" class="btn btn-link">Register</a>        
-      </p>
-
-    </form>
-    <!-- Form -->
-
-  </div>
-
-</div>
 <!-- Material form login -->
           </div>
           <!--/.Panel 7-->
@@ -290,28 +239,7 @@
           <!--Panel 8-->
           <div class="tab-pane fade" id="panel8" role="tabpanel">
 
-            <!--Body-->
-            <div class="modal-body">
-              <div class="md-form form-sm mb-5">
-                <i class="fa fa-envelope prefix"></i>
-                <input type="email" id="modalLRInput12" placeholder="Your Email" class="form-control form-control-sm validate">
-              </div>
-
-              <div class="md-form form-sm mb-5">
-                <i class="fa fa-lock prefix"></i>
-                <input type="password" id="modalLRInput13" placeholder="Your Password" class="form-control form-control-sm validate">
-              </div>
-
-              <div class="md-form form-sm mb-4">
-                <i class="fa fa-lock prefix"></i>
-                <input type="password" id="modalLRInput14" placeholder="Repeat Password" class="form-control form-control-sm validate">
-              </div>
-
-              <div class="text-center form-sm mt-2">
-                <button class="btn btn-info">Sign up <i class="fa fa-sign-in ml-1"></i></button>
-              </div>
-
-            </div>
+           
             <!--Footer-->
             <div class="modal-footer">
               <div class="options text-right">
