--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,53 +1,114 @@
-<div class="card">
-  
-  <!--Card content-->
-  <div class="card-body px-lg-5 pt-0">
+<br/><br/><br/>
+<div class="container mt-2 mb-4">
+  <div class="col-sm-8 ml-auto mr-auto">
+    <ul class="nav nav-pills nav-fill mb-1 border border-primary shadow rounded " id="pills-tab" role="tablist">
+      <li class="nav-item"> <a class="nav-link active" id="pills-signin-tab" data-toggle="pill" href="#pills-signin" role="tab" aria-controls="pills-signin" aria-selected="true">Sign In</a> </li>
+      <li class="nav-item"> <a class="nav-link" id="pills-signup-tab" data-toggle="pill" href="#pills-signup" role="tab" aria-controls="pills-signup" aria-selected="false">Register</a> </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-signin" role="tabpanel" aria-labelledby="pills-signin-tab">
+        <div class="col-sm-12 border border-primary shadow rounded pt-2">          
+          <form [formGroup]="form" (ngSubmit)="checkLogin()" class="text-center p-5">          
+            <div class="form-group text-left">
+              <label class="font-weight-bold">Email <span class="text-danger">*</span></label>
+              <input type="email" formControlName="username" name="email" id="email" class="form-control" placeholder="Enter valid email" required>
 
-    <!-- Form -->
-    <div mat-dialog-content>
-      <div>Number: {{ data.numbers }}</div>
+	          <mat-error *ngIf="isFieldInvalid('username')">
+	            Enter valid email
+	          </mat-error>
+
+            </div>
+            <div class="form-group text-left">
+              <label class="font-weight-bold">Password <span class="text-danger">*</span></label>
+              <input type="password" name="password" id="password" formControlName="password" class="form-control" placeholder="***********" required>
+
+            <mat-error *ngIf="isFieldInvalid('password')">
+	            Enter password
+    	      </mat-error>
+
+            </div>
+            
+            <div class="form-group text-left">
+              	<div class="row">
+                	<div class="col">
+                  	<label><input type="checkbox" name="condition" id="condition"> Remember me.</label>
+                	</div>                
+            	</div>
+        	</div>
+
+            <div class="form-group text-left">
+              <div class="row">                
+                <div class="col"> <a href="javascript:;" data-toggle="modal" data-target="#forgotPass">Forgot Password?</a> </div>
+              </div>
+            </div>
+            
+            <div class="form-group" >
+              <input type="submit" name="submit" value="Sign In" class="btn btn-block btn-primary" style="width: 40%;">
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-signup" role="tabpanel" aria-labelledby="pills-signup-tab">
+        <div class="col-sm-12 border border-primary shadow rounded pt-2">
+
+          <form method="post" id="singnupFrom">
+            <div class="form-group">
+              <label class="font-weight-bold">Email <span class="text-danger">*</span></label>
+              <input type="email" name="signupemail" id="signupemail" class="form-control" placeholder="Enter valid email" required>
+            </div>
+            <div class="form-group">
+              <label class="font-weight-bold">User Name <span class="text-danger">*</span></label>
+              <input type="text" name="signupusername" id="signupusername" class="form-control" placeholder="Choose your user name" required>
+              <div class="text-danger"><em>This will be your login name!</em></div>
+            </div>
+            <div class="form-group">
+              <label class="font-weight-bold">Phone #</label>
+              <input type="text" name="signupphone" id="signupphone" class="form-control" placeholder="(000)-(0000000)">
+            </div>
+            <div class="form-group">
+              <label class="font-weight-bold">Password <span class="text-danger">*</span></label>
+              <input type="password" name="signuppassword" id="signuppassword" class="form-control" placeholder="***********" pattern="^\S{6,}$" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Must have at least 6 characters' : ''); if(this.checkValidity()) form.password_two.pattern = this.value;"
+                required>
+            </div>
+            <div class="form-group">
+              <label class="font-weight-bold">Confirm Password <span class="text-danger">*</span></label>
+              <input type="password" name="signupcpassword" id="signupcpassword" class="form-control" pattern="^\S{6,}$" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');" placeholder="***********" required>
+            </div>
+            <div class="form-group">
+              <label><input type="checkbox" name="signupcondition" id="signupcondition" required> I agree with the <a href="javascript:;">Terms &amp; Conditions</a> for Registration.</label>
+            </div>
+            <div class="form-group">
+              <input type="submit" name="signupsubmit" value="Sign Up" class="btn btn-block btn-primary" style="width: 40%;">
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-    <form class="text-center" style="color: #757575;" action="#!" [formGroup]="loginForm">
-
-      <!-- Email -->
-      <div class="md-form">
-        <input type="email" id="materialLoginFormEmail" placeholder="Email" class="form-control" formControlName="email" mdbInput mdbValidate/>
-         <mdb-error *ngIf="input.invalid && (input.dirty || input.touched)">Input invalid</mdb-error>
-    <mdb-success *ngIf="input.valid && (input.dirty || input.touched)">Input valid</mdb-success>
-      </div>
-
-      <!-- Password -->
-      <div class="md-form">
-        <input type="password" id="materialLoginFormPassword" placeholder="Password" class="form-control" formControlName="password" mdbInput mdbValidate />
-             <mdb-error *ngIf="input.invalid && (input.dirty || input.touched)">Input invalid</mdb-error>
-    <mdb-success *ngIf="input.valid && (input.dirty || input.touched)">Input valid</mdb-success>
-      </div>
-
-      <div class="d-flex justify-content-around">
-        <div>
-          <!-- Remember me -->
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="materialLoginFormRemember">
-            <label class="form-check-label" for="materialLoginFormRemember">Remember me</label>
-          </div>
-        </div>
-        <div>
-          <!-- Forgot password -->
-          <a href="">Forgot password?</a>
-        </div>
-      </div>
-
-      <!-- Sign in button -->
-      <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" type="submit">Sign in</button>
-
-      <!-- Register -->
-      <p>Not a member?
-        <a [routerLink]="['/parentsregister']" class="btn btn-link">Register</a>        
-      </p>
-
-    </form>
-    <!-- Form -->
-
   </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="forgotPass" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <form method="post" id="forgotpassForm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Forgot Password</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label>Email <span class="text-danger">*</span></label>
+              <input type="email" name="forgotemail" id="forgotemail" class="form-control" placeholder="Enter your valid email..." required>
+            </div>
+            <div class="form-group">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Sign In</button>
+            <button type="submit" name="forgotPass" class="btn btn-primary"><i class="fa fa-envelope"></i> Send Request</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
